--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 Inventory Overview
             </a>
             <a class="navbar-brand" href="#">
+                Buzzin Babe Homepage
+            </a>
+            <a class="navbar-brand" href="#">
                 Inventory Management
             </a>
         </div>
