--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand">
                 Inventory Overview
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="http://www.buzzinbabe.com" target="_blank">
                 Buzzin Babe Homepage
             </a>
             <a class="navbar-brand" href="#">
@@ -51,7 +51,7 @@
                                     <th>Name</th>
                                     <th>Stock</th>
                                     <th>Last Restock</th>
-                                    <th>Recent Change</th>
+                                    <th>Cost</th>
                                 </tr>
                             </thead>
                 
@@ -62,7 +62,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
 
                                 <tr>
@@ -71,7 +71,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
                 
                                 <tr>
@@ -80,7 +80,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
@@ -88,7 +88,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
@@ -96,7 +96,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
 
                                 <tr>
@@ -105,7 +105,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
 
                                 <tr>
@@ -114,7 +114,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
 
                                 <tr>
@@ -123,7 +123,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
                                 <tr>
                                     <td>9</td>
@@ -131,7 +131,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
                                 <tr>
                                     <td>10</td>
@@ -139,7 +139,7 @@
                                     <td>Blank</td>
                                     <td>Blank</td>
                                     <td>Blank</td>
-                                    <td>Blank</td>
+                                    <td>$100</td>
                                 </tr>
                             </tbody>
                         </table>
